@@ -905,11 +905,7 @@ static VT100TCC decode_other_enc(unsigned char *datap,
     size_t len = datalen;
 
     while (len > 0) {
-        if (*p>=0x20&&*p<=0x7f) {
-            p++;
-            len--;
-        }
-        else if (*p>0x7f) {
+        if (*p>=0x20) {
             p++;
             len--;
         }
